completed header section with nav, banner

--- a/index.html
+++ b/index.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architechture</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
+<body class="work-sans-font">
     <header>
+        <section class="header-container">
+                    <!-- start nav section -->
+         <nav class="nav-container">
+            <div class="nav-content">
+                    <h1 class="nav-title">G3 Architects</h1>
+            <ul class="list-container">
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">Login</a></li>
+              </ul>
+            </div>
+         </nav>
+        <!-- end nav section -->
 
+        <!-- start hero section -->
+         <section class="hero-container">
+            <div class="hero-content">
+                <h1 class="hero-title">Brand New <br> Group of Architects </h1>
+                <p class="hero-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="hero-button-container">
+                    <button class="hero-button"> Explore More</button>
+                </div>
+                <img class="hero-image" src="images/banner.png" alt="Image Here">
+            </div>
+         </section>
+
+        <!-- end hero section -->
+        </section>
     </header>
     <main>
 
